# Psiga

./: .gitignore  Psiga.sln  README.md  TransistorTest.sln  TransistorTest.userprefs
DETEX_NATIVE_LIBRARY/: CMakeLists.txt  README.md  detexcs_native.c
DETEX_NATIVE_LIBRARY/detex/: detex.h  png.c
DetexCS/: DetexCS.cs  DetexCS.csproj
DetexCS/Properties/: AssemblyInfo.cs
LibSquishDxt5/: LibSquish.cs  LibSquishDxt5.csproj
LibSquishDxt5/Properties/: AssemblyInfo.cs
Psiga/: EntriesWidget.cs  List.cs  PackageViewerWindow.cs  PackageWidget.cs  PannableDrawingArea.cs  Program.cs  PropertyView.cs  PropertyViewVisibleProperty.cs  Psiga.csproj  Shape.cs  StatusReceiver.cs  SubtexturesWidget.cs  SubtexturesWindow.cs  TextureCache.cs  TextureView.cs  TextureWidget.cs  TreeviewPaneWidget.cs  Util.cs  Widget.cs
Psiga/Properties/: AssemblyInfo.cs
Psiga/gtk-gui/: PackageViewerWindow.cs  Psiga.PropertyView.cs  Psiga.SubtexturesWindow.cs  Psiga.TextureWidget.cs  Psiga.TreeviewPaneWidget.cs  (+1 more)
PsigaPkgLib/: EntryReference.cs  IntVector2.cs  LZF.cs  Package.cs  PackageManager.cs  PackageReadException.cs  PackageReference.cs  PsigaPkgLib.csproj  ReadStatus.cs  StreamHelpers.cs  Vector2.cs  packages.config
PsigaXnbLib/: ContentLoadException.cs  ContentManagerShim.cs  ContentReaderManager.cs  ContentReaderShim.cs  ContentTypeReader.cs  DxtUtil.cs  LzxDecoder.cs  LzxDecoderStream.cs  PsigaShimUnsupported.cs  PsigaXnbLib.csproj  SurfaceFormat.cs  Texture.cs  Texture2DRipperReader.cs  Texture3D.cs  Texture3DRipperReader.cs
TransistorTest/: Program.cs  TransistorTest.csproj
(+16 files in other folders)
